--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ h1 {
 /*STILE BUTTON AREA*/
 .button {
     border-radius: 4px;
+    border: 1px solid transparent;
     text-align: center;
     font-size: 12px;
     padding: 5px;  
@@ -65,7 +66,6 @@ h1 {
 
 #button1 {
     background-color: #47adf1;
-    border-color: #47adf1;
     color: white
 }
 
