--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ h1 {
 
 
 /*STILE LIST AREA*/
+.arrow::before {
+    content: '\25BC';
+}
+
 .style1, .style2 {
     padding-top: 30px;
     color: #444851;
