--- a/css/style.css
+++ b/css/style.css
@@ -102,26 +102,28 @@ h1 {
 .list-item {
     font-weight: 500;
     line-height: 40px;
+    list-style-type: none;
 }
 
-.check, .cross {
+.circle {
   height: 15px;
   width: 15px;
   border-radius: 50%;
   display: inline-block;
   margin-right: 10px;
-  color: #6fc6b2;
   font-size: 10px;
   font-weight: 700;
   text-align: center;
 }
 
-.check {
+.check::before {
+    content: '\2713';
     border: 2px solid #6fc6b2;
     color: #6fc6b2;
 }
 
-.cross {
+.cross::before {
+    content: '\2716';
     border: 2px solid #eb5e58;
     color: #eb5e58;
 }
