--- a/css/style.css
+++ b/css/style.css
@@ -93,36 +93,40 @@ h1 {
     margin-top: 2px;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+}
 
 .list-title {
     font-weight:800;
-    font-size: 25px;
+    font-size: 25px; 
+    margin-bottom: 10px;
 }
 
 .list-item {
     font-weight: 500;
-    list-style-type: none;
+    font-size: 20px;
 }
 
-.circle {
+.circle::before {
   height: 15px;
   width: 15px;
   border-radius: 50%;
   display: inline-block;
-  margin-right: 10px;
-  font-size: 10px;
-  font-weight: 700;
   text-align: center;
 }
 
 .check::before {
     content: '\2713';
+    font-size: 10px;
     border: 2px solid #6fc6b2;
     color: #6fc6b2;
 }
 
 .cross::before {
     content: '\2716';
+    font-size: 10px;
     border: 2px solid #eb5e58;
     color: #eb5e58;
 }
